...
                                <rect key="frame" x="177" y="447" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="9Sx-4q-Bx4"/>
                                    <constraint firstAttribute="width" constant="60" id="tqb-uD-0HJ"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="amW-C2-XAm">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="YD1-FR-Nvy"/>
                                </constraints>
...
                                                    <fontDescription key="fontDescription" name="YandexSansDisplay-Regular" family="Yandex Sans Display" pointSize="13"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wij-tO-EyW" userLabel="Like Button">
                                                    <rect key="frame" x="352" y="11" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeInactive"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="42" id="LSm-xh-adr"/>
                                                        <constraint firstAttribute="height" constant="42" id="jSy-hj-60m"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" title="" image="likeInactive"/>
...
                                <viewLayoutGuide key="contentLayoutGuide" id="niV-Jh-jJ1"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="jSE-he-a61"/>
                                <connections>
                                    <outlet property="delegate" destination="Uig-yg-TV3" id="Qdl-wS-5hR"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="navBackButton" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x2Y-co-vXs">
                                <rect key="frame" x="8" y="56" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="navBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="ASK-NQ-UTQ"/>
                                    <constraint firstAttribute="width" constant="48" id="gGr-kL-KVp"/>
                                </constraints>
...
            <objects>
                <viewController storyboardIdentifier="WebViewViewController" id="RZT-qf-dhv" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="wyw-0s-JVI">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" restorationIdentifier="UnsplashWebView" translatesAutoresizingMaskIntoConstraints="NO" id="Xal-7U-pga">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
...
